--- a/index.html
+++ b/index.html
@@ -10,20 +10,7 @@
 <body>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate debitis doloribus inventore iure maxime odio
     porro quaerat quos sit soluta? Dolor, illo maxime modi numquam porro rerum saepe voluptatum! Molestias.</p>
-<p>Ab architecto asperiores blanditiis debitis dolor earum itaque iure molestiae molestias nihil nostrum officia,
-    perferendis possimus reiciendis rem repellendus reprehenderit, repudiandae veritatis vero, vitae! Dolore nobis odit
-    quibusdam sit voluptates!</p>
-<p>Consequatur cupiditate dolore ducimus enim ex, facilis fugit illo iste iure, libero nesciunt nobis odio officiis
-    possimus qui quibusdam repellendus sed sit sunt suscipit? Delectus et laborum obcaecati ratione voluptatibus?</p>
-<p>Architecto aspernatur, autem commodi debitis enim et impedit in, ipsa, iusto maxime modi natus possimus provident
-    repellendus tempore? Aliquam animi cum, doloribus laboriosam neque odit perferendis quasi saepe unde
-    voluptatibus!</p>
-<p>Blanditiis dolores nam nesciunt. A deleniti dolore rerum sequi velit. Aliquid dolorem fugit impedit itaque laboriosam
-    laudantium natus necessitatibus, omnis quasi quidem recusandae, sequi soluta temporibus totam veniam? Neque,
-    possimus!</p>
-<p>A beatae, consequatur consequuntur delectus distinctio dolor ex inventore, ipsam iure laboriosam laborum, nisi
-    provident quaerat sapiente veritatis! Cumque dolore fugit quo. Numquam quam, quis. Deleniti esse temporibus
-    voluptates! Perferendis.</p>
+<p>Ab agPerferendis.</p>
 <p>Dolor ea expedita ipsum porro quo reprehenderit sint. Ab accusantium, aliquid amet architecto commodi ducimus earum
     enim, et explicabo inventore laborum minima modi necessitatibus nemo nulla quas repellendus tempore temporibus?</p>
 <p>Animi distinctio doloremque esse in nulla! Ad beatae delectus dolor, dolore, eius fuga inventore molestias odit quia
@@ -34,5 +21,8 @@
 <p>Accusantium, adipisci aliquid consectetur cupiditate debitis delectus, dicta distinctio earum fugiat illum iste iure
     maxime minima neque pariatur quasi repellat ut vel! Adipisci, consequatur distinctio est explicabo quasi rem
     sit.</p>
+<div class="card">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, modi, neque. Adipisci corporis distinctio est impedit laborum odit omnis repellendus totam. Atque deserunt doloremque est harum ipsam neque rem sapiente.
+</div>
 </body>
 </html>
